# uc_calculator_mcp

./: .env.example  .gitignore  CALCULATOR_README.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 7491686beae0_initial_migration_create_users_and_.py  a5785afbb3dc_add_uc_calculator_and_lha_rates_models.py
app/: config.py  main.py  mcp_server.py
app/database/: base.py  session.py
app/dependencies/: auth.py
app/middleware/: cors.py
app/models/: item.py  lha_rates.py  uc_calculation.py  user.py
app/routers/: items.py  uc_calculator.py  users.py
app/schemas/: item.py  uc_calculation.py  user.py
app/utils/: lha_service.py  uc_calculator.py  validators.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_health.py  test_items.py  test_uc_api.py  test_uc_calculator.py  test_users.py
